--- a/utility_tests/CMakeLists.txt
+++ b/utility_tests/CMakeLists.txt
@@ -18,6 +18,6 @@ target_link_libraries(utility_tests PUBLIC
 target_compile_features(utility_tests PUBLIC cxx_std_20)
 
 target_include_directories(utility_tests PUBLIC
-   "${PROJECT_SOURCE_DIR}/utility/include"
+   "${CMAKE_CURRENT_SOURCE_DIR}/../utility/include"
 )
 
