--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,6 +13,9 @@ add_subdirectory(geometry_tests)
 add_subdirectory(utility)
 add_subdirectory(utility_tests)
 
+add_subdirectory(any_op)
+add_subdirectory(any_op_tests)
+
 add_subdirectory(ui)
 add_subdirectory(ui_qt)
 
