Use standard CMake support for C++ 2020
- Use CMAKE_CXX_STANDARD property instead of compile feature cxx_std_20.
- The old way was specific to visual studio.
- Fix some template dependent-type issues.
- First step toward making declaring new op simpler.

--- a/any_op_tests/CMakeLists.txt
+++ b/any_op_tests/CMakeLists.txt
@@ -15,9 +15,7 @@ target_link_libraries(any_op_tests PUBLIC
    any_op
 )
 
-target_compile_features(any_op_tests PUBLIC
-   cxx_std_20
-)
+set_property(TARGET any_op_tests PROPERTY CXX_STANDARD 20)
 
 target_include_directories(any_op_tests PUBLIC
    include
