Simplify op declarations.
- Made the call_op functions public in the op base classes.
- Made the operation function be free functions instead of call() member functions.
- This simplifies the operation declarations and calling convention for the final caller.
- For the final caller, the functions really look like compile-time overloaded functions even though they are resolved at run-time.

--- a/any_op_tests/CMakeLists.txt
+++ b/any_op_tests/CMakeLists.txt
@@ -1,5 +1,6 @@
 
 add_library(any_op_tests SHARED
+   src/any_tests.cpp
    src/compare_op_tests.cpp
    src/convert_op_tests.cpp
    src/dominant_op_tests.cpp
