First pass at an attempt to make n-ary ops.

--- a/any_op/CMakeLists.txt
+++ b/any_op/CMakeLists.txt
@@ -1,6 +1,7 @@
 
 add_library(any_op
    Readme.md
+   include/dak/any_op/n_ary_op.h
    include/dak/any_op/binary_op.h
    include/dak/any_op/compare_op.h            src/compare_op.cpp
    include/dak/any_op/convert_op.h            src/convert_op.cpp
