object system WIP
- Rmove old TODO.
- Added first version of array, dict, object, name, element, ...

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,9 @@ add_subdirectory(geometry_tests)
 add_subdirectory(utility)
 add_subdirectory(utility_tests)
 
+add_subdirectory(object)
+add_subdirectory(object_tests)
+
 add_subdirectory(any_op)
 add_subdirectory(any_op_tests)
 
