- Add object ref to element. - Add transaction.

--- a/object/CMakeLists.txt
+++ b/object/CMakeLists.txt
@@ -10,6 +10,7 @@ add_library(object
    include/dak/object/ref.h                     src/ref_base.cpp
    include/dak/object/ref_counted.h             src/ref_counted.cpp
    include/dak/object/stream.h                  src/stream.cpp
+   include/dak/object/transaction.h             src/transaction.cpp
    include/dak/object/voc.h
 )
 
