--- a/object/CMakeLists.txt
+++ b/object/CMakeLists.txt
@@ -9,6 +9,7 @@ add_library(object
    include/dak/object/ref.h                     src/ref_base.cpp
    include/dak/object/ref_counted.h             src/ref_counted.cpp
    include/dak/object/ref_stream.h              src/ref_stream.cpp
+   include/dak/object/similar.h                 src/similar.cpp
    include/dak/object/timeline.h
    include/dak/object/transaction.h             src/transaction.cpp
    include/dak/object/voc.h                     src/voc.cpp
