--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,9 +1,11 @@
 cmake_minimum_required(VERSION 3.7.0)
 
+option(want_qt "Control if Qt library is built." 1)
+
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# The dak/core library and its tests.
+# The dak libraries and their tests.
 
 project(dak_utility)
 
@@ -23,5 +25,8 @@ add_subdirectory(any_op)
 add_subdirectory(any_op_tests)
 
 add_subdirectory(ui)
-add_subdirectory(ui_qt)
+
+if(want_qt)
+   add_subdirectory(ui_qt)
+endif()
 
