Added generic data support to element_t.
- The generic data is held as a std::any.
- any_op are used for comparison, streaming, etc.
- Renamed stream_op_t to ostream_op_t.
- Added istream_op_t to any_op.

Note: generic streaming-in of data in element_t does not work because we don't have a generic way to write in the stream what type should be read back.

--- a/any_op/CMakeLists.txt
+++ b/any_op/CMakeLists.txt
@@ -8,7 +8,8 @@ add_library(any_op
    include/dak/any_op/op.h
    include/dak/any_op/op_selector.h           src/register_ops.cpp
    include/dak/any_op/size_op.h               src/size_op.cpp
-   include/dak/any_op/stream_op.h             src/stream_op.cpp
+   include/dak/any_op/stream_op.h             src/ostream_op.cpp
+                                              src/istream_op.cpp
    include/dak/any_op/to_text_op.h            src/to_text_op.cpp
 )
 
