--- a/object/CMakeLists.txt
+++ b/object/CMakeLists.txt
@@ -21,7 +21,10 @@ add_library(object
 target_include_directories(object PUBLIC
    include
    "${CMAKE_CURRENT_SOURCE_DIR}/../utility/include"
+   "${CMAKE_CURRENT_SOURCE_DIR}/../any_op/include"
 )
 
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set_property(TARGET object PROPERTY CXX_STANDARD 20)
 
