--- a/object_tests/CMakeLists.txt
+++ b/object_tests/CMakeLists.txt
@@ -12,14 +12,18 @@ add_library(object_tests SHARED
 
 target_link_libraries(object_tests PUBLIC
    object
+   any_op
    utility
 )
 
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set_property(TARGET object_tests PROPERTY CXX_STANDARD 20)
 
 target_include_directories(object_tests PUBLIC
    include
    "${CMAKE_CURRENT_SOURCE_DIR}/../utility/include"
+   "${CMAKE_CURRENT_SOURCE_DIR}/../any_op/include"
    "${CMAKE_CURRENT_SOURCE_DIR}/../object/include"
 )
 
