--- a/geometry/CMakeLists.txt
+++ b/geometry/CMakeLists.txt
@@ -19,5 +19,7 @@ target_include_directories(geometry PUBLIC
    "${CMAKE_CURRENT_SOURCE_DIR}/../utility/include"
 )
 
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set_property(TARGET geometry PROPERTY CXX_STANDARD 20)
 
