--- a/ui/CMakeLists.txt
+++ b/ui/CMakeLists.txt
@@ -20,5 +20,7 @@ target_include_directories(ui PUBLIC
    "${CMAKE_CURRENT_SOURCE_DIR}/../geometry/include"
 )
 
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set_property(TARGET ui PROPERTY CXX_STANDARD 20)
 
