--- a/ui_qt/CMakeLists.txt
+++ b/ui_qt/CMakeLists.txt
@@ -42,4 +42,6 @@ target_include_directories(ui_qt PUBLIC
    "${Qt5WinExtras_INCLUDE_DIRS}"
 )
 
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set_property(TARGET ui_qt PROPERTY CXX_STANDARD 20)
