--- a/utility/CMakeLists.txt
+++ b/utility/CMakeLists.txt
@@ -20,5 +20,7 @@ target_include_directories(utility PUBLIC
    include
 )
 
+set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set_property(TARGET utility PROPERTY CXX_STANDARD 20)
 
