--- a/object_tests/CMakeLists.txt
+++ b/object_tests/CMakeLists.txt
@@ -4,6 +4,7 @@ add_library(object_tests SHARED
    src/dict_tests.cpp
    src/element_tests.cpp
    src/name_tests.cpp
+   src/namespace_tests.cpp
    src/object_tests.cpp
    src/ref_stream_tests.cpp
    src/transaction_tests.cpp
