Added weak references.
- Added weak_ref_t as a weak reference.
- The weak ref still keeps the object alive but in a zombie state.
- An object with only weak references gets cleared, so that it breaks references cycles.
- That is so the reference count can be accessed.
- Split the ref headers in multiple headers.
- Elements can contain weak references.
- Added explicit element data access to make code clearer.
- Renamed compatible to is_compatible and type to get_type.
- Added I/O for weak references.
- Names keep a weak reference to their namespaces.
- Namespaces keep a weak reference to their parent.

--- a/object/CMakeLists.txt
+++ b/object/CMakeLists.txt
@@ -8,7 +8,11 @@ add_library(object
    include/dak/object/name_stuff.h              src/name_stuff.cpp
    include/dak/object/namespace.h               src/namespace.cpp
    include/dak/object/object.h                  src/object.cpp
-   include/dak/object/ref.h                     src/ref_base.cpp
+   include/dak/object/ref.h
+   include/dak/object/weak_ref.h
+   include/dak/object/valid_ref.h
+   include/dak/object/edit_ref.h
+   include/dak/object/ref_base.h                src/ref_base.cpp
    include/dak/object/ref_counted.h             src/ref_counted.cpp
    include/dak/object/ref_stream.h              src/ref_stream.cpp
    include/dak/object/similar.h                 src/similar.cpp
