Added test for weak reference.
Also made simpler declaring a type derived from ref_counted_t by providing a macro that declares the normal base implementation for make() and the necessary friends.

--- a/object_tests/CMakeLists.txt
+++ b/object_tests/CMakeLists.txt
@@ -7,6 +7,7 @@ add_library(object_tests SHARED
    src/namespace_tests.cpp
    src/object_tests.cpp
    src/ref_stream_tests.cpp
+   src/ref_tests.cpp
    src/transaction_tests.cpp
    include/dak/object/tests/helpers.h
 )
