--- a/any_op_tests/CMakeLists.txt
+++ b/any_op_tests/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-add_library(any_op_tests SHARED
+add_library(dak_any_op_tests SHARED
    src/any_tests.cpp
    src/compare_op_tests.cpp
    src/convert_op_tests.cpp
@@ -12,17 +12,16 @@ add_library(any_op_tests SHARED
    include/dak/any_op/tests/helpers.h
 )
 
-target_link_libraries(any_op_tests PUBLIC
-   any_op
+target_link_libraries(dak_any_op_tests PUBLIC
+   dak_any_op
+   dak_utility
 )
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set_property(TARGET any_op_tests PROPERTY CXX_STANDARD 20)
+set_property(TARGET dak_any_op_tests PROPERTY CXX_STANDARD 20)
 
-target_include_directories(any_op_tests PUBLIC
+target_include_directories(dak_any_op_tests PRIVATE
    include
-   "${CMAKE_CURRENT_SOURCE_DIR}/../utility/include"
-   "${CMAKE_CURRENT_SOURCE_DIR}/../any_op/include"
 )
 
