--- a/object_tests/CMakeLists.txt
+++ b/object_tests/CMakeLists.txt
@@ -1,5 +1,5 @@
 
-add_library(object_tests SHARED
+add_library(dak_object_tests SHARED
    src/array_tests.cpp
    src/dict_tests.cpp
    src/element_tests.cpp
@@ -12,20 +12,17 @@ add_library(object_tests SHARED
    include/dak/object/tests/helpers.h
 )
 
-target_link_libraries(object_tests PUBLIC
-   object
-   any_op
-   utility
+target_link_libraries(dak_object_tests PUBLIC
+   dak_object
+   dak_any_op
+   dak_utility
 )
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
-set_property(TARGET object_tests PROPERTY CXX_STANDARD 20)
+set_property(TARGET dak_object_tests PROPERTY CXX_STANDARD 20)
 
-target_include_directories(object_tests PUBLIC
+target_include_directories(dak_object_tests PRIVATE
    include
-   "${CMAKE_CURRENT_SOURCE_DIR}/../utility/include"
-   "${CMAKE_CURRENT_SOURCE_DIR}/../any_op/include"
-   "${CMAKE_CURRENT_SOURCE_DIR}/../object/include"
 )
 
