eplace hard-coded include  directories in libraries by references to other libraries.

--- a/geometry/CMakeLists.txt
+++ b/geometry/CMakeLists.txt
@@ -18,9 +18,7 @@ target_include_directories(dak_geometry PUBLIC
    include
 )
 
-target_include_directories(dak_geometry PRIVATE
-   "${CMAKE_CURRENT_SOURCE_DIR}/../utility/include"
-)
+target_link_libraries(dak_geometry dak_utility)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
