--- a/any_op/CMakeLists.txt
+++ b/any_op/CMakeLists.txt
@@ -17,9 +17,7 @@ target_include_directories(dak_any_op PUBLIC
    include
 )
 
-target_include_directories(dak_any_op PRIVATE
-   "${CMAKE_CURRENT_SOURCE_DIR}/../utility/include"
-)
+target_link_libraries(dak_any_op dak_utility)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
