- Add exact_name_t when exact comparison is needed. - Handle name_t metadata when printing and parsing. - Make input stream take a transaction so that new name and metadata can be created. - Add modify function to namespace_t to add new names in a transaction. -Fix failing to insert a name into a namespace when a name with the same label already exists. - Same in name_stuff_t when adding to the namespace. - Same in transaction_t when adding stuff. - TODO: make name creation be in a transaction.

--- a/object/CMakeLists.txt
+++ b/object/CMakeLists.txt
@@ -5,6 +5,7 @@ add_library(dak_object
    include/dak/object/dict.h                    src/dict.cpp
    include/dak/object/element.h                 src/element.cpp
    include/dak/object/name.h                    src/name.cpp
+   include/dak/object/exact_name.h              src/exact_name.cpp
    include/dak/object/name_stuff.h              src/name_stuff.cpp
    include/dak/object/namespace.h               src/namespace.cpp
    include/dak/object/object.h                  src/object.cpp
