Renamed element_t to value_t.

--- a/object/CMakeLists.txt
+++ b/object/CMakeLists.txt
@@ -3,7 +3,6 @@ add_library(dak_object
    include/dak/object/all.h
    include/dak/object/array.h                   src/array.cpp
    include/dak/object/dict.h                    src/dict.cpp
-   include/dak/object/element.h                 src/element.cpp
    include/dak/object/name.h                    src/name.cpp
    include/dak/object/exact_name.h              src/exact_name.cpp
    include/dak/object/name_stuff.h              src/name_stuff.cpp
@@ -20,6 +19,7 @@ add_library(dak_object
    include/dak/object/similar.h                 src/similar.cpp
    include/dak/object/timeline.h
    include/dak/object/transaction.h             src/transaction.cpp
+   include/dak/object/value.h                   src/value.cpp
    include/dak/object/voc.h                     src/voc.cpp
    include/dak/object/voc_internal.h
 )
