Improve the make-op
- Use the as-op in more place to be more resilient and shorter.
- The templated make-op now return the concrete type.
- Added tests for make-op.
- Added make-object-op to create an instance of a dynamic object.
- Fix the value_t reset function to reset to the correct type.

--- a/object/CMakeLists.txt
+++ b/object/CMakeLists.txt
@@ -3,6 +3,7 @@ add_library(dak_object
    include/dak/object/all.h
    include/dak/object/array.h                   src/array.cpp
    include/dak/object/dict.h                    src/dict.cpp
+   include/dak/object/make_object_op.h
    include/dak/object/name.h                    src/name.cpp
    include/dak/object/exact_name.h              src/exact_name.cpp
    include/dak/object/name_stuff.h              src/name_stuff.cpp
