Renamed some operations.
- Renamed make_op to construct_op.
- Renamed make_object_op to make_op.
- The new name a more in lne with the called function name.

--- a/any_op_tests/CMakeLists.txt
+++ b/any_op_tests/CMakeLists.txt
@@ -2,10 +2,10 @@
 add_library(dak_any_op_tests SHARED
    src/any_tests.cpp
    src/compare_op_tests.cpp
+   src/construct_op_tests.cpp
    src/convert_op_tests.cpp
    src/dominant_op_tests.cpp
    src/is_compatible_op_tests.cpp
-   src/make_op_tests.cpp
    src/size_op_tests.cpp
    src/stream_op_tests.cpp
    src/to_text_op_tests.cpp
