--- a/any_op/CMakeLists.txt
+++ b/any_op/CMakeLists.txt
@@ -4,6 +4,7 @@ add_library(dak_any_op
    include/dak/any_op/all.h
    include/dak/any_op/as_op.h
    include/dak/any_op/compare_op.h            src/compare_op.cpp
+   include/dak/any_op/construct_op.h          src/construct_op.cpp
    include/dak/any_op/convert_op.h            src/convert_op.cpp
    include/dak/any_op/dominant_op.h           src/dominant_op.cpp
    include/dak/any_op/get_type_name_op.h      src/get_type_name_op.cpp
@@ -12,7 +13,6 @@ add_library(dak_any_op
    include/dak/any_op/is_integer_op.h         src/is_integer_op.cpp
    include/dak/any_op/is_real_op.h            src/is_real_op.cpp
    include/dak/any_op/is_unsigned_op.h        src/is_unsigned_op.cpp
-   include/dak/any_op/make_op.h               src/make_op.cpp
    include/dak/any_op/op.h
    include/dak/any_op/op_selector.h           src/register_ops.cpp
    include/dak/any_op/size_op.h               src/size_op.cpp
