Created object_io library.
ALso standardize include to use <>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,9 @@ add_subdirectory(utility_tests)
 add_subdirectory(object)
 add_subdirectory(object_tests)
 
+add_subdirectory(object_io)
+add_subdirectory(object_io_tests)
+
 add_subdirectory(any_op)
 add_subdirectory(any_op_tests)
 
