More unit tests.
More case where the input stream aborts reading.

--- a/object_io_tests/CMakeLists.txt
+++ b/object_io_tests/CMakeLists.txt
@@ -1,6 +1,7 @@
 
 add_library(dak_object_io_tests SHARED
-   src/ref_stream_tests.cpp
+   src/ref_istream_tests.cpp
+   src/ref_ostream_tests.cpp
    include/dak/object_io/tests/helpers.h
 )
 
