--- a/object_tests/CMakeLists.txt
+++ b/object_tests/CMakeLists.txt
@@ -3,12 +3,16 @@ add_library(dak_object_tests SHARED
    src/array_tests.cpp
    src/dict_tests.cpp
    src/value_tests.cpp
+   src/value_conversion_tests.cpp
+   src/value_ensure_tests.cpp
+   src/value_function_tests.cpp
    src/make_op_tests.cpp
    src/name_tests.cpp
    src/namespace_tests.cpp
    src/object_tests.cpp
    src/ref_tests.cpp
    src/transaction_tests.cpp
+   include/dak/object/tests/data.h
    include/dak/object/tests/helpers.h
 )
 
