Start of command class.
- Add command_t and command_tree_t class to describe commands.
- Rely on transaction for undo/redo.
- Split object_t into a constant_t base class.
- Rename basename to synonym.
- Made name_stuff_t constructors private.
- Fixed docs typos.

--- a/object/CMakeLists.txt
+++ b/object/CMakeLists.txt
@@ -2,6 +2,9 @@
 add_library(dak_object
    include/dak/object/all.h
    include/dak/object/array.h                   src/array.cpp
+   include/dak/object/command.h                 src/command.cpp
+   include/dak/object/command_tree.h            src/command_tree.cpp
+   include/dak/object/constant.h                src/constant.cpp
    include/dak/object/dict.h                    src/dict.cpp
    include/dak/object/make_op.h
    include/dak/object/name.h                    src/name.cpp
