Simplifying object design.
The goal is to rely less on any_op. The problem with any_op is that it does not work well with super-types, the op-searching mechanism cannot easily walk the type tree of multiple arguments without being extremely complicated, unreadable template code.

The goal is also to promote using object types as -is.

- Move type info to utility library.
- Removed the constant base class of object to simplify.
- Made value favor core types.
- Made value keep all references as references to object.
- Made commands be objects.

--- a/utility_tests/CMakeLists.txt
+++ b/utility_tests/CMakeLists.txt
@@ -1,5 +1,7 @@
 
 add_library(dak_utility_tests SHARED
+   src/get_type_info_tests.cpp
+   src/get_type_name_tests.cpp
    src/multi_thread_progress_tests.cpp
    src/number_tests.cpp
    src/progress_tests.cpp
@@ -9,6 +11,8 @@ add_library(dak_utility_tests SHARED
    src/thread_pool_tests.cpp
    src/threaded_work_tests.cpp
    src/undo_stack_tests.cpp
+
+   include/dak/utility/tests/helpers.h
 )
 
 target_link_libraries(dak_utility_tests PUBLIC
@@ -18,3 +22,7 @@ target_link_libraries(dak_utility_tests PUBLIC
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set_property(TARGET dak_utility_tests PROPERTY CXX_STANDARD 20)
+
+target_include_directories(dak_utility_tests PRIVATE
+   include
+)
