Use a CMake presets instead of a build script.
Add a read-me file to guide how to build the project.

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,9 @@
 *.userosscache
 *.sln.docstates
 
+# CMake user preset
+CMakeUserPresets.json
+
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
